# teledesk

./: .env.example  .gitignore  README.md  pyproject.toml
.github/: release.yml
.github/workflows/: build-release.yml
scripts/: package_portable.py
src/easygram/: __init__.py  __main__.py  app.py
src/easygram/config/: __init__.py  settings.py  version.py
src/easygram/domain/: __init__.py
src/easygram/integrations/: __init__.py
src/easygram/integrations/accessibility/: __init__.py  accessible_output2_backend.py  null_backend.py
src/easygram/integrations/github/: releases_client.py
src/easygram/integrations/tdlib/: __init__.py  auth.py  mappers.py
src/easygram/services/: __init__.py  chat_controller.py  formatter.py  message_browser.py  portable_updater.py  update_service.py
src/easygram/ui/: __init__.py  main_frame.py
src/easygram/ui/dialogs/: __init__.py  update_dialog.py
src/easygram/ui/panels/: __init__.py  chat_list_panel.py  chat_view_panel.py
src/easygram/ui/tabs/: __init__.py  (+1 more)
src/teledesk/: __init__.py  __main__.py  app.py
src/teledesk/config/: __init__.py  settings.py  version.py
src/teledesk/domain/: __init__.py  models.py  profiles.py  updates.py
src/teledesk/integrations/: __init__.py
src/teledesk/services/: __init__.py  chat_controller.py  formatter.py  message_browser.py  portable_updater.py  update_service.py
src/teledesk/ui/: __init__.py  main_frame.py
tests/integration/: test_release_parsing.py
tests/unit/: test_settings.py  test_tdlib_gateway.py  test_update_service.py  test_update_service_safe.py  test_version.py
(+11 files in other folders)
